--- a/vars/main.yml
+++ b/vars/main.yml
@@ -26,7 +26,7 @@ monit_limits_fields_520:
   - stop_timeout
   - start_timeout
   - restart_timeout
-monit_limits_fields: "{{ ((ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('16.04', '>='))) | ternary(monit_limits_fields_516, []) }} + {{ ((ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('17.04', '>='))) | ternary(monit_limits_fields_520, []) }}"
+monit_limits_fields: "{{ ((ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.04', '>='))) | ternary(monit_limits_fields_516, []) }} + {{ ((ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('17.04', '>='))) | ternary(monit_limits_fields_520, []) }}"
 
 monit_ssl_fields_515:
   - version
@@ -38,20 +38,20 @@ monit_ssl_fields_515:
 monit_ssl_fields_521:
   - ciphers
   - httpd_pem
-monit_ssl_fields: "{{ ((ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('16.04', '>='))) | ternary(monit_ssl_fields_515, []) }} + {{ ((ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('17.04', '>'))) | ternary(monit_ssl_fields_521, []) }}"
+monit_ssl_fields: "{{ ((ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.04', '>='))) | ternary(monit_ssl_fields_515, []) }} + {{ ((ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('17.04', '>'))) | ternary(monit_ssl_fields_521, []) }}"
 
-monit_httpd_ssl_options_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('17.04', '>')) }}"
+monit_httpd_ssl_options_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('17.04', '>')) }}"
 
-monit_mail_ssl_options_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('16.04', '>=')) }}"
+monit_mail_ssl_options_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.04', '>=')) }}"
 
-monit_test_ssl_options_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('16.04', '>=')) }}"
+monit_test_ssl_options_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.04', '>=')) }}"
 
-monit_test_onreboot_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('16.10', '>=')) }}"
+monit_test_onreboot_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.10', '>=')) }}"
 
-monit_test_total_memory_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('8', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('14.10', '>=')) }}"
+monit_test_total_memory_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('8', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('14.10', '>=')) }}"
 
-monit_test_total_cpu_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('8', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('14.10', '>=')) }}"
+monit_test_total_cpu_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('8', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('14.10', '>=')) }}"
 
-monit_test_file_content_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('16.04', '>=')) }}"
+monit_test_file_content_available: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '>=')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.04', '>=')) }}"
 
-monit_mysql_auth_script: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('9', '<')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('16.10', '<')) }}"
+monit_mysql_auth_script: "{{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('9', '<')) or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('16.10', '<')) }}"
